--- a/Municipalidad-de-Ucacha.html
+++ b/Municipalidad-de-Ucacha.html
@@ -10,17 +10,21 @@
 <body>
   <div class="app-wrap">
     <header>
-      <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city..." />
     </header>
     <main>
       <section class="location">
-        <div class="city">Northampton, GB</div>
-        <div class="date">Thursday 10 January 2020</div>
+        <div class="city" id="city-name">Ciudad ,Pais</div>
+        <div class="date">Fecha</div>
       </section>
       <div class="current">
-        <div class="temp">15<span>°c</span></div>
-        <div class="weather">Sunny</div>
-        <div class="hi-low">13°c / 16°c</div>
+        <div class="temp" id="actual-temp" >Temperatura<span>°c</span></div>
+        <div id="st"></div>
+        <div class="weather" id="description">Estacion</div>
+        <div  class="weather"id="humidity">Humedad</div>
+        
+        <div class="weather" id="wind">Velocidad + direccion</div>
+        <div class="weather" id="visibility">Visibilidad</div>
+
       </div>
     </main>
   </div>
