Le pongo el cargando..

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </header>
     <main>
       <section class="location">
-        <div class="city" id="city-name">Ciudad ,Pais</div>
-        <div class="date">Fecha</div>
+        <div class="city" id="city-name"></div>
+        <div class="date"></div>
       </section>
       <div class="current">
-        <div class="temp" id="actual-temp" >Temperatura<span>°c</span></div>
+        <div class="temp" id="actual-temp" ><span></span></div>
         <div id="st"></div>
-        <div class="weather" id="description">Estacion</div>
-        <div  class="weather"id="humidity">Humedad</div>
+        <div class="weather" id="description"></div>
+        <div  class="weather"id="humidity"></div>
         
-        <div class="weather" id="wind">Velocidad + direccion</div>
-        <div class="weather" id="visibility">Visibilidad</div>
+        <div class="weather" id="wind"></div>
+        <div class="weather" id="visibility"></div>
 
       </div>
     </main>
