--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </section>
       <div class="current">
         <div class="temp" id="actual-temp" ><span></span></div>
-        <div id="st"></div>
+        <div class="weather" id="st"></div>
         <div class="weather" id="description"></div>
         <div  class="weather"id="humidity"></div>
         
