Saco pronostico extendido

--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
     <main>
       <section class="location">
         <div class="city" id="city-name"></div>
-        <div class="date"></div>
+        <div class="date" id="date"></div>
       </section>
       <div class="current">
         <div class="temp" id="actual-temp" ><span></span></div>
+
         <div class="weather" id="st"></div>
         <div class="weather" id="description"></div>
         <div  class="weather"id="humidity"></div>
-        
         <div class="weather" id="wind"></div>
         <div class="weather" id="visibility"></div>
+        <div  class="weather"id="pressure"></div>
+
 
       </div>
     </main>
+    <div class="date">Pronostico oficial del servicio meteorologico nacional - Actualizado 05:50AM</div>
+
   </div>
   <script src="main.js"></script>
 </body>
